[project]
name = "stream-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]

[tool.uv.workspace]
members = [
    "venv",
]
